# housing-regression

./: .gitignore  Dockerfile  Dockerfile.streamlit  app.py  mlflow.db  pyproject.toml  requirements.txt  usmetros.xlsx
.github/workflows/: ci.yaml
models/: xgb_best_model.pkl  xgb_model.pkl
notebooks/: 02_feature_eng_encoding.ipynb  03_baseline.ipynb  04_linear_regression_regularization.ipynb  05_XGBoost.ipynb  06_hyperparameter_tuning_MFLow.ipynb  07_S3_push_datasets_AWS.ipynb  data_split.ipynb
src/api/: main.py
src/feature_pipeline/: feature_engineering.py  load.py  preprocess.py
src/inference_pipeline/: inference.py
tests/: test_features.py  test_training.py
